[gd_scene load_steps=24 format=2]

[ext_resource path="res://Graphics/NicePng_pacman-pixel-png_1842600.png" type="Texture" id=1]
[ext_resource path="res://Fruit.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Mobile - Pac-Man iPod - Sound Effects/fruit.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 1.5, 1.5 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 169, 221, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 209, 201, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 169, 161, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 209, 181, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 209, 221, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 209, 161, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 169, 201, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 169, 181, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 169, 161, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Apple",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Bell",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "Cherries",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Galaxian",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Key",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Melon",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Orange",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "Strawberry",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 8 ), SubResource( 10 ), SubResource( 6 ), SubResource( 9 ), SubResource( 4 ), SubResource( 3 ), SubResource( 7 ) ],
"loop": true,
"name": "allFruits",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 166, 0, 22, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 166, 80, 22, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 166, 100, 22, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 166, 20, 22, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 166, 120, 22, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 166, 40, 22, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 166, 140, 22, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 166, 60, 22, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "100",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "1000",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "2000",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "300",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "3000",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "500",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "5000",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "700",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "allScores",
"speed": 5.0
} ]

[node name="Bonus" type="Area2D"]
gravity = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 20 )

[node name="Fruit" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Cherries"

[node name="ScoreBonus" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
animation = "100"

[node name="FruitDisplay" type="Timer" parent="."]
wait_time = 9.333

[node name="BonusDisplay" type="Timer" parent="."]
wait_time = 2.0

[node name="FruitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Bonus_area_entered"]
[connection signal="timeout" from="FruitDisplay" to="." method="_on_FruitDisplay_timeout"]
[connection signal="timeout" from="BonusDisplay" to="." method="_on_BonusDisplay_timeout"]
